--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore src/TfParsec.fsproj
     - name: Pack
-      run: dotnet pack
+      run: dotnet pack src/TfParsec.fsproj
 #    - name: Test
 #      run: dotnet test --no-build --verbosity normal
     - name: Upload a Build Artifact
