--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,4 +32,7 @@ jobs:
       uses: actions/upload-artifact@v4.6.2
       with:
         # Artifact name
-        name: TfParse.*.nupkg
+        name: TfParse.nupkg
+        path: TfParse.*.nupkg
+        
+        
