--- a/src/TfParsec.fsproj
+++ b/src/TfParsec.fsproj
@@ -2,7 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>TfParse</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>ImaginaryDevelopment</Authors>
+    <Product>TfParse</Product>
   </PropertyGroup>
 
   <ItemGroup>
