--- a/src/TfParsec.fsproj
+++ b/src/TfParsec.fsproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="BReuse.fs" />
     <Compile Include="Samples.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
